// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="text-[1rem] [&+&]:mt-4"
        data-field-has-error="false"
      >
        <label
          class="block leading-[1em] mb-[0.5em] text-graphite"
        >
          <span
            class="text-[0.875rem]"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="text-[1rem] [&+&]:mt-4"
        data-field-has-error="false"
      >
        <label
          class="block leading-[1em] mb-[0.5em] text-graphite"
        >
          <span
            class="text-[0.875rem]"
          >
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="text-[1rem] [&+&]:mt-4"
        data-field-has-error="false"
      >
        <label
          class="block leading-[1em] mb-[0.5em] text-graphite"
        >
          <span
            class="text-[0.875rem]"
          >
            Label
             (optional)
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with (optional) and with \`labelEndAdornment\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="text-[1rem] [&+&]:mt-4"
        data-field-has-error="false"
      >
        <label
          class="block leading-[1em] mb-[0.5em] text-graphite"
        >
          <span
            class="text-[0.875rem]"
          >
            Label
             (optional)
            <span>
              label end adornment
            </span>
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required with asterisk 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form
      class=""
    >
      <div
        class="text-[1rem] [&+&]:mt-4"
        data-field-has-error="false"
      >
        <label
          class="block leading-[1em] mb-[0.5em] text-graphite"
        >
          <span
            class="text-[0.875rem]"
          >
            <span
              class="align-top text-red mr-[0.3125em]"
            >
              *
            </span>
            Label
          </span>
        </label>
      </div>
    </form>
  </div>
</div>
`;
